# pytest-ves

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: schema-provenance.md
docs/adr/: ADR-001-design.md  ADR-002-no-3gpp-schema-vendor.md  ADR-003-python-version-floor.md  ADR-004-envelope-preflight.md
scripts/: vendor-schema.sh
src/pytest_ves/: __init__.py  builders.py  plugin.py  types.py  validator.py
src/pytest_ves/schemas/: __init__.py
tests/: conftest.py  test_builders.py  test_domain_coverage.py  test_edge_cases.py  test_envelope_preflight.py  test_factories_extra.py  test_fault_event.py  test_heartbeat_event.py  test_measurement_event.py  test_notification_event.py  test_other_event.py  test_package_metadata.py  test_plugin_api.py  test_pnf_registration_event.py  test_schema_provenance.py  test_state_change_event.py  test_stnd_defined_event.py  test_syslog_event.py  test_validator.py  test_version_consistency.py
tests/integration/: README.md  __init__.py  test_http_roundtrip.py  test_onap_collector.py
