[project]
name = "pytest-ves"
version = "0.2.2"
description = "pytest fixtures and builders for ONAP VES 7.x events (fault, heartbeat, measurement, and more)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "thc1006", email = "hctsai1006@cs.nctu.edu.tw" },
]
keywords = ["pytest", "ves", "onap", "o-ran", "smo", "testing", "fixtures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.25,<5",
]

[project.optional-dependencies]
# Rust-backed validator, 10-100x faster on the 3091-line ONAP schema.
fast = ["jsonschema-rs>=0.46,<1"]
# Random-data factories for property-based testing. Opt-in; not imported by
# the core plugin.
factories = ["polyfactory>=3.3,<4"]

[project.urls]
Homepage = "https://github.com/thc1006/pytest-ves"
Documentation = "https://github.com/thc1006/pytest-ves#readme"
Issues = "https://github.com/thc1006/pytest-ves/issues"
Changelog = "https://github.com/thc1006/pytest-ves/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
pytest_ves = "pytest_ves.plugin"

[build-system]
requires = ["uv_build>=0.8,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=7.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-jsonschema",
    # Integration-test extras (opt-in via -m integration):
    "testcontainers>=4.8",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that exercise HTTP wire-format or real ONAP containers; skipped in the default unit-test run.",
]
# Default invocation is unit-tests-only; run `-m integration` to include HTTP
# round-trip and ONAP VES Collector tests.
addopts = "-ra --strict-markers -m 'not integration'"
# Note on coverage: because pytest_ves IS a pytest plugin registered via
# pytest11 entry points, pytest-cov activates AFTER pytest has already
# imported our package. That produces "module-not-measured" warnings and
# under-reports coverage. Run coverage under pytest via:
#   uv run coverage run -m pytest && uv run coverage report -m
# See CONTRIBUTING.md for the canonical invocation.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# pytest.importorskip() must run BEFORE the guarded imports, so the latter
# are intentionally module-level but not at the top of the file.
"tests/test_factories_extra.py" = ["E402"]
# http.server.BaseHTTPRequestHandler subclasses inherit stdlib method
# names (do_POST, do_GET); older ruff versions flag them N802. Explicit
# ignore makes our local ruff + the pinned pre-commit ruff agree.
"tests/integration/test_http_roundtrip.py" = ["N802"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# jsonschema-rs is an optional extra (see [project.optional-dependencies]
# fast); mypy shouldn't error on its absence during the default dev
# install, and shouldn't flag an unused ignore when it IS installed.
[[tool.mypy.overrides]]
module = "jsonschema_rs"
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["pytest_ves"]
branch = true
# Handle editable install: map the installed site-packages copy back to src/.
relative_files = true

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
